[project]
name = "py-tavern-example"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "osorosia", email = "64416398+osorosia@users.noreply.github.com" }
]
dependencies = [
    "tavern>=2.3.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true
